--- a/public/tfetch-auth/package.json
+++ b/public/tfetch-auth/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tailwind": "npx tailwindcss -i ./input.css -o ./output.css --watch"
   },
   "devDependencies": {
     "tailwind": "^4.0.0",
